--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="w3.css">
 <title>New Website</title>
-<body>
 <nav>
   <ul class="w3-navbar w3-black">
     <li><a href="javascript:void(0)">Home</a></li>
@@ -39,6 +38,5 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(1)"></span>
 </div>
-    </body>
-  </html>
+  
   
