--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/w3.css">
+<link rel="stylesheet" href="https://solo206.github.io/w3.css ">
 <title>New Website</title>
 <nav>
   <ul class="w3-navbar w3-black">
