--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(1)"></span>
 </div>
-  
+
+    <script type="text/javascript" src="script.js">
+    
+    </script>
   
