--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
     <img src="img4.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
-  <div class="slideshow-container">
+
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
     <img src="img5.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="text">Caption Two</div>
   </div>
-  <div class="slideshow-container">
+
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
     <img src="img6.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="text">Caption Three</div>
   </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
 <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 
     <script type="text/javascript" src="script.js">
