--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="stylesheet.css ">
 <title>New Website</title>
 <nav>
-  <ul class="w3-navbar w3-black">
+  <ul class="topnav" id="myTopnav">
     <li><a href="javascript:void(0)">Home</a></li>
     <li><a href="javascript:void(0)">Page1</a></li>
     <li><a href="javascript:void(0)">Page2</a></li>
