--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="javascript:void(0)">Page1</a></li>
     <li><a href="javascript:void(0)">Page2</a></li>
     <li><a href="javascript:void(0)">Page3</a></li>
+    <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></li>
   </ul>
 </nav>
 <div class="slideshow-container">
