--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <title>New Website</title>
 <nav>
   <ul class="topnav" id="myTopnav">
-    <li><a href="javascript:void(0)">Home</a></li>
-    <li><a href="javascript:void(0)">Page1</a></li>
-    <li><a href="javascript:void(0)">Page2</a></li>
-    <li><a href="javascript:void(0)">Page3</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#page1">Page1</a></li>
+    <li><a href="#page2">Page2</a></li>
+    <li><a href="#page3">Page3</a></li>
     <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></li>
   </ul>
 </nav>
