--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="img4.jpg" style="width:100%">
+    <img src="img4.jpg" style="width:100%, height:30%">
     <div class="text">Caption Text</div>
   </div>
 
